--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,9 @@ body {
     max-height: calc(100vh - 100px);
     top: 50%;
     left: 50%;
+    font-size: 12px; 
+    line-height: 1.5;
+    padding: 10px;
 }
 
 .cv-modal-content a{
@@ -147,6 +150,33 @@ body {
 .cv-modal-content h5{
     margin-bottom: -15px;
 }
+
+.cv-modal-content h1,
+.cv-modal-content h3,
+.cv-modal-content h5 {
+    margin: 5px 0; 
+}
+
+.cv-modal-content ul {
+    padding-left: 30px; 
+}
+
+.cv-modal-content table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 10px; 
+}
+
+.cv-modal-content th, .cv-modal-content td {
+ 
+    padding: 2px;
+    text-align: center;
+}
+
+.cv-modal-content p {
+    margin-top: 1px; 
+}
+
 .close-modal {
     position: absolute;
     top: 10px;
