--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,15 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
-}
-
-.container {
+    background-color: #ebebeb;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container {
     min-height: 100vh;
+   
     margin-top: 20px;
     margin-bottom: 10px;
 }
@@ -18,7 +19,9 @@ body {
     text-align: center;
     background-color: #ffffff;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    height: 770px;
+    width: 350px;
+    
 }
 
 .conteudo{
@@ -28,8 +31,9 @@ body {
 .profile img {
     border-radius: 8px;
     width: 100%;
-    height: 200px;
+    height: 300px;
     margin-bottom: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .profile h1 {
@@ -189,18 +193,22 @@ body {
 @media (max-width: 600px) {
     .profile {
         padding: 10px;
+        width: 90%;
+        height: 770px;
     }
 }
 
 @media (max-width: 768px) {
     .profile {
-        max-width: 400px;
+        width: 90%;
+        height: 800px;
     }
 }
 
 @media (max-width: 1024px) {
     .profile {
-        max-width: 600px;
+        width: 90%;
+        height: 800px;
     }
 }
 
